# Enough-Thinking

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/local/: workflows.db
scripts/: 00_setup_colab.sh  01_build_data.sh  02_eval_baselines.sh  03_run_phase1_grpo.sh  04_run_phase2_seal.sh  05_run_mcp_demo.sh  06_make_plots.py
src/enough_thinking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/enough_thinking/data/: build_gsm8k_jsonl.py
src/enough_thinking/eval/: eval_gsm8k_baseline.py  eval_jsonl.py
src/enough_thinking/mcp/: agent_client.py  make_db.py  server.py
src/enough_thinking/phase1_grpo/: run_phase1.py
src/enough_thinking/phase2_seal/: run_phase2.py  train_edit_policy.py
src/enough_thinking/rewards/: r1_rewards.py
